fix custom-form-collapse-body style

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -268,6 +268,9 @@
     }
 
     &-body {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
       width: 100%;
       overflow: hidden;
       max-height: 0;
@@ -291,7 +294,7 @@
         // color: $text-gray-600;
 
         &-short {
-          min-height: 48px;
+          min-height: 110px;
         }
 
         &-long {
